# tpom

./: .gitignore  Cargo.toml  Makefile  README.md  extract_vdso_live.py  stuff.asm
.cargo/: config
.github/workflows/: CI.yml
src/: auxv.rs  bin.rs  lib.rs  opcodes.rs  trampolines.rs  vdso.rs
src/test_files/: test_vdso_elf_1  test_vdso_elf_2
src/test_files/proc/self/: maps
tests/: pub.rs
tests/files/: aarch64_0x12ff34ff56ff78ff.asm  aarch64_0x12ff34ff56ff78ff_pad_32.asm  riscv64_0x12ff34ff56ff78ff.asm  riscv64_0x12ff34ff56ff78ff_pad_32.asm  x86_64_0x12ff34ff56ff78ff.asm  x86_64_0x12ff34ff56ff78ff_pad_16.asm
