[package]
name = "timekeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "timekeeper"
path = "src/lib.rs"

[[bin]]
name = "timekeeper"
path = "src/bin.rs"
[dependencies]
goblin = "0.6.0"
libc = "0.2.137"

[dev-dependencies]
serial_test = "0.9.0"
