[package]
name = "tpom"
version = "0.1.0"
edition = "2021"
description = "Allows overriding the system clock; useful for testing"
license = "MIT"
repository = "https://github.com/DavidVentura/tpom"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tpom"
path = "src/lib.rs"

[[bin]]
name = "tpom"
path = "src/bin.rs"
[dependencies]
ctor = "0.2.6"
goblin = "0.6.0"
libc = "0.2.151"

[dev-dependencies]
serial_test = "0.9.0"


[profile.release]
strip = "symbols"
