[package]
name = "tpom"
version = "0.1.0"
edition = "2021"
description = "Allows overriding the system clock; useful for testing"
license = "MIT"
repository = "https://github.com/DavidVentura/tpom"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tpom"
path = "src/lib.rs"

[[bin]]
name = "tpom"
path = "src/bin.rs"

[dependencies]
cacheflush-sys = "0.1.0"
goblin = { version = "0.6.0", default-features = false, features = ["endian_fd", "elf32", "elf64"] }
libc = "0.2.151"
small_ctor = "0.1.1"

[dev-dependencies]


[profile.release]
strip = "symbols"
